crates/sdk/tests/compile_fail/derive_mergeable_hashmap.stderr
error: (calimero)> `HashMap` is not allowed here — std collections are not CRDTs and would silently diverge across replicas. Use `UnorderedMap<K, V>` from `calimero_storage::collections` instead.

       If you genuinely need a non-CRDT type, skip `#[app::state]` / `#[derive(Mergeable)]` and implement `Mergeable` by hand — but understand that any non-CRDT field will not converge across replicas.
  --> tests/compile_fail/derive_mergeable_hashmap.rs:10:12
   |
10 |     items: HashMap<String, String>,
   |            ^^^^^^^
